fix: fix bug on button not have hover and add no scrollbar on chat

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,18 @@
   --radius-sm: calc(var(--radius) - 4px);
 }
 
+/* Hide scrollbar but allow scroll */
+.no-scrollbar {
+  /* Firefox */
+  scrollbar-width: none;
+  /* IE/Edge legacy */
+  -ms-overflow-style: none;
+}
+.no-scrollbar::-webkit-scrollbar {
+  /* Chrome/Safari/Edge (Chromium) */
+  display: none;
+}
+
 /* ======== stream css overrides ======== */
 .str-video__call-stats {
   max-width: 500px;
